<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tag Recognizer</string>
    <string name="btn_calibrate_label">Calibrate</string>
    <string name="btn_radar_label">Search tags</string>
    <string name="btn_help_label"></string>
    <string name="btn_stop_label">Stop search</string>
    <string name="btn_settings_label">Settings</string>
    <string name="btn_about_label">About</string>
    <string name="btn_help_description">Help menu</string>
    <string name="btn_radar_description">Search tags using the images taken and send results found to the server. Previous calibration advisable.</string>
    <string name="btn_calibrate_description">Calibrate the boundaries of R, G and B, in order, to detect this colors in the image. Used a template tag to calibrate. This template must be alone (without any other tag)</string>
    <string name="btn_stop_description">Stop search of tags.</string>
    <string name="btn_settings_description">Allow to change the caracteristics (pattern,size, ect.) of the tags that we are looking for.</string>
    <string name="btn_about_description">Information about app (developer, briefly description, version, etc.)</string>
    
    <string name="sett_tag_section">Tags parameters:</string>
    <string name="sett_tag_cols">Num. of cols:</string>
    <string name="sett_tag_rows">Num. of rows:</string>
    <string name="sett_tag_height">Height (cm):</string>
    <string name="sett_tag_width">Width (cm):</string>
    <string name="sett_tag_border">Border size(cm):</string>
    <string name="sett_tag_template">Tag template:</string>
    
    <string name="btn_stt_accept">Save</string>
    <string name="btn_stt_cancel">Cancel</string>
    
    <string name="sett_server_own">App server</string>
    <string name="sett_server_desk">Desktop server</string>
    <string name="sett_server_ip">IP (192.168.3.1):</string>
    <string name="sett_server_port">Port  (e.g: 8080):</string>
    
    <string name="sett_oth">Others</string>
    <string name="sett_oth_checkbox">Debug Mode</string>

    <string name="separator_description">Separator</string>
</resources>