<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:padding="10dp">
		
		<include 
		    layout="@layout/setting_server"/>
       
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/separator_description"
           android:padding="5dp"
           android:src="@raw/line_separator" />
       
       <!-- tags layout -->
       <include 
           layout="@layout/setting_tags"/>       
       
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/separator_description"
           android:padding="5dp"
           android:src="@raw/line_separator" />
       
       <!-- debug layout -->
       
       <include 
           layout="@layout/setting_debug" />
       
       
       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:contentDescription="@string/separator_description"
           android:padding="5dp"
           android:src="@raw/line_separator" />
       
       <!-- buttons layout -->
       <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="fill_parent"
        	android:gravity="center_horizontal|bottom" >

        	<Button
            	android:id="@+id/btn_accept"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/btn_stt_accept"
            	android:drawableLeft="@raw/check19" />

        	<Button
            	android:id="@+id/btn_cancel"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:text="@string/btn_stt_cancel"
            	android:drawableLeft="@raw/cancel19" />

    </LinearLayout>

    </LinearLayout>
    

</ScrollView>